--- a/election_project/vote/templates/vote/vote.html
+++ b/election_project/vote/templates/vote/vote.html
@@ -15,7 +15,7 @@
             <p class="text-gray-700">{{ candidat.slogan }}</p>
             <form method="post" action="{% url 'vote_page' %}">
                 {% csrf_token %}
-                <input type="hidden" name="candidat" value="{{ candidat.id }}">
+                <input type="hidden" name="candidat_matricule" value="{{ candidat.etudiant.matricule }}">
                 <button type="submit" class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                     Je vote pour
                 </button>
