admin_panel start

--- a/election_project/vote/templates/vote/admin_panel.html
+++ b/election_project/vote/templates/vote/admin_panel.html
@@ -1,1 +1,131 @@
-<h1>Hello Admin</h1>
+{% extends "vote/base.html" %}
+{% load custom_filters %}
+
+{% block title %}Admin Panel{% endblock %}
+
+{% block content %}
+<div class="container mx-auto mt-8">
+    <div class="bg-white p-6 rounded-lg shadow-md">
+        <div class="flex justify-center mb-6">
+            <button class="tab-button mr-12 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="showTab('candidat', this)">Candidats</button>
+            <button class="tab-button mr-12 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="showTab('etudiant', this)">Étudiants</button>
+            <button class="tab-button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" onclick="showTab('vote', this)">Votes</button>
+        </div>
+        <div id="candidat" class="tab-content">
+            <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4" onclick="toggleForm('add-candidat-form')">Ajouter un Candidat</button>
+            <div id="add-candidat-form" class="hidden mt-4">
+                <h3 class="text-3xl text-center font-bold mb-4">Ajouter un Candidat</h3>
+                <form method="post" enctype="multipart/form-data" class="bg-white p-8 rounded shadow-md w-full max-w-md mx-auto">
+                    {% csrf_token %}
+                    <div class="grid grid-cols-1 gap-4">
+                        <div>
+                            <label for="id_etudiant" class="block text-gray-700">Étudiant</label>
+                            {{ candidat_form.etudiant|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                        </div>
+                        <div>
+                            <label for="id_slogan" class="block text-gray-700">Slogan</label>
+                            {{ candidat_form.slogan|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                        </div>
+                        <div>
+                            <label for="id_annee_candidature" class="block text-gray-700">Année de Candidature</label>
+                            {{ candidat_form.annee_candidature|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                        </div>
+                        <div>
+                            <label for="id_photo" class="block text-gray-700">Photo</label>
+                            {{ candidat_form.photo|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                        </div>
+                    </div>
+                    <button type="submit" name="add_candidat" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4">Ajouter</button>
+                </form>
+            </div>
+            <h3 class="text-3xl font-bold mt-8 mb-4">Liste des Candidats</h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                {% for candidat, votes in votes_par_candidat.items %}
+                <div class="bg-white p-6 rounded-lg shadow-md relative">
+                    {% if candidat.photo %}
+                    <img src="{{ candidat.photo.url }}" alt="Photo de {{ candidat.etudiant.nom }}" class="w-full h-48 object-cover rounded-t-lg mb-4">
+                    {% endif %}
+                    <h3 class="text-xl font-bold">{{ candidat.etudiant.nom }}</h3>
+                    <p class="text-gray-700">{{ candidat.slogan }}</p>
+                    <p class="text-gray-700 font-bold">{{ votes }} votes</p>
+                    <form method="post" class="absolute bottom-4 right-4">
+                        {% csrf_token %}
+                        <input type="hidden" name="candidat_matricule" value="{{ candidat.etudiant.matricule }}">
+                        <button type="submit" name="delete_candidat" class="text-red-500 underline hover:font-bold focus:outline-none">Supprimer</button>
+                    </form>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div id="etudiant" class="tab-content hidden">
+            <h3 class="text-3xl font-bold mb-4 text-center">Ajouter un Étudiant</h3>
+            <form method="post" class="bg-white p-8 rounded shadow-md w-full max-w-md mx-auto">
+                {% csrf_token %}
+                <div class="grid grid-cols-1 gap-4">
+                    <div>
+                        <label for="id_matricule" class="block text-gray-700">Matricule</label>
+                        {{ etudiant_form.matricule|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                    </div>
+                    <div>
+                        <label for="id_nom" class="block text-gray-700">Nom</label>
+                        {{ etudiant_form.nom|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                    </div>
+                    <div>
+                        <label for="id_filiere" class="block text-gray-700">Filière</label>
+                        {{ etudiant_form.filiere|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                    </div>
+                    <div>
+                        <label for="id_niveau" class="block text-gray-700">Niveau</label>
+                        {{ etudiant_form.niveau|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                    </div>
+                    <div>
+                        <label for="id_annee_scolaire" class="block text-gray-700">Année Scolaire</label>
+                        {{ etudiant_form.annee_scolaire|add_class:"mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:border-blue-300" }}
+                    </div>
+                </div>
+                <button type="submit" name="add_etudiant" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4">Ajouter</button>
+            </form>
+        </div>
+        <div id="vote" class="tab-content hidden">
+            <h3 class="text-3xl font-bold mb-4">Statistiques de Vote</h3>
+            <ul class="list-disc pl-5">
+                <li>Total des étudiants : {{ total_etudiants }}</li>
+                <li>Total des votes : {{ total_votes }}</li>
+                <li>Étudiants de la filière "sécurité informatique" n'ayant pas voté : {{ non_votants }}</li>
+                {% for specialite, votes in votes_par_specialite.items %}
+                <li>{{ specialite.nom }} - {{ votes }} votes</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
+
+<script>
+    var buttons = document.getElementsByClassName('tab-button');
+    buttons[0].classList.add('bg-blue-700');
+
+    function showTab(tabId, element) {
+        var tabs = document.getElementsByClassName('tab-content');
+        for (var i = 0; i < tabs.length; i++) {
+            tabs[i].classList.add('hidden');
+        }
+        document.getElementById(tabId).classList.remove('hidden');
+
+        for (var i = 0; i < buttons.length; i++) {
+            buttons[i].classList.remove('bg-blue-700');
+            buttons[i].classList.add('bg-blue-500');
+        }
+        element.classList.remove('bg-blue-500');
+        element.classList.add('bg-blue-700');
+    }
+
+    function toggleForm(formId) {
+        var form = document.getElementById(formId);
+        if (form.classList.contains('hidden')) {
+            form.classList.remove('hidden');
+        } else {
+            form.classList.add('hidden');
+        }
+    }
+</script>
+{% endblock %}
